--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nest-typescript-starter",
+  "name": "hotelier-nestjs",
   "private": true,
   "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
+  "description": "Something hot...",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -21,19 +21,37 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.6.13",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.13",
+    "@nestjs/graphql": "^7.9.10",
+    "@nestjs/jwt": "^7.2.0",
+    "@nestjs/mongoose": "^7.2.4",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.13",
+    "apollo-server-express": "^2.21.0",
+    "bcrypt": "^5.0.1",
+    "class-validator": "^0.13.1",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.4",
+    "mongoose": "^5.11.18",
+    "ms": "^2.1.3",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^6.6.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.6",
     "@nestjs/schematics": "^7.2.7",
     "@nestjs/testing": "^7.6.13",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/ms": "^0.7.31",
     "@types/node": "^14.14.31",
+    "@types/passport-jwt": "^3.0.5",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
